--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -16,7 +16,7 @@ Section~\ref{sec:cni framework} outlines the theoretical concepts needed to desc
 The amplitude describing elastic scattering of protons may be expected to receive three contributions, each corresponding to one of the following sets of Feynman diagrams.
 \begin{itemize}
 \item Containing QED elements only. This amplitude can be obtained by perturbative calculations, see Section~\ref{sec:cni coulomb}.
-\item Containing QCD elements only. This amplitude is not directly calculable from the QCD lagrangian, Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parametrisations.
+\item Containing QCD elements only. This amplitude is not directly calculable from the QCD lagrangian, Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parame\-trisations.
 \item Containing both QED and QCD elements. This contribution can neither be directly calculated from the Lagrangians, nor can \textit{ad hoc} parametrisations be used -- this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce two interference formulae attempting to calculate the corresponding effects.
 \end{itemize}
 
@@ -199,7 +199,7 @@ One of the goals of this study is to probe the origin of the differential cross-
 \item Section \ref{sec:fit exp1}: fits with purely exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality can come from the CNI effects only.
 \item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality without the CNI effects. Here, the non-exponentiality may be due to the nuclear modulus, CNI effects or both.
 \end{itemize}
-For each of these nuclear modulus cases, the following two phase parametrisation were considered:
+For each of these nuclear modulus cases, the following two phase parametrisations were considered:
 \begin{itemize}\setlength\itemsep{0pt}
 \item constant phase, Eq.~(\ref{eq:nuc phase con}), as a representative of the central-phases family,
 \item peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters fixed to the values in Eq.~(\ref{eq:nuc phase per val}) to represent peripheral behaviour in the impact parameter space.
@@ -243,7 +243,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \end{center}
 \end{figure*}
 
-Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY approach, that formula is experimentally excluded even on the basis of only the low-$|t|$ data set discussed here. This result is complementary to the observation of a diffractive minimum at $\sqrt{s} = 8\un{TeV}$ (to be published in a forthcoming article) which also contradicts the assumptions of the SWY formula.
+Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad quality. The step-2 fit using both $\beta^*=1000$\,m and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY approach, that formula is experimentally excluded even on the basis of only the low-$|t|$ data set discussed here. This result is complementary to the observation of a diffractive minimum at $\sqrt{s} = 8\un{TeV}$ (to be published in a forthcoming article) which also contradicts the assumptions of the SWY formula.
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
 \begin{itemize}
