--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -52,8 +52,8 @@
 
 \begin{keyword}
 proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interference \sep total cross-section \sep rho parameter \sep TOTEM \sep LHC
-\PACS 13.60.Fz % Elastic and Compton scattering
-\PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
+\PACS 13.85.Dz % Elastic scattering
+\PACS 13.85.Lg % Total cross sections
 \PACS 13.40.Ks % Electromagnetic corrections to strong- and weak-interaction processes
 \end{keyword}
 \end{frontmatter}
