--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -6,7 +6,7 @@ To fit $\d\sigma/\d t$ in the CNI region, two interference formulae -- Simplifie
 were explored in conjunction with different mathematical descriptions of the modulus and phase of the nuclear amplitude as a function of $t$. The nuclear modulus was parametrised as an exponential function with a polynomial of degree $N_b=1$ or $3$ in the exponent. These two alternatives allowed to test whether the nuclear modulus can be purely exponential or more flexibility is required. For the phase two options were considered, leading to different impact-parameter distributions of elastic scattering events: a constant phase implying a central behaviour, and another description favouring peripheral collisions. The following conclusions can be drawn.
 \begin{itemize}
 \item Purely exponential nuclear modulus ($N_b=1$), constant phase: excluded with more than $7\un{\sigma}$ confidence. Since this is the only combination compatible with the SWY formula, the data exclude the usage of the formula.
-\item Purely exponential nuclear modulus ($N_b=1$), peripheral phase: the data do not exclude this option which, however, may be disfavoured from other perspectives.
+\item Purely exponential nuclear modulus ($N_b=1$), peripheral phase: the data do not exclude this option which, however, is disfavoured from other perspectives.
 \item Non-exponential nuclear modulus ($N_b=3$): both constant and peripheral phases are well compatible with the data, therefore the central impact-parameter picture prevalent in phenomenological descriptions is not a necessity.
 \end{itemize}
 
