Emphasized parameter consistency.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11841 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -276,7 +276,7 @@ last fit     : chi^2/ndf = 54.48/55 = 0.990, probability = 4.95E-01, significanc
 previous fit : chi^2/ndf = 20.66/24 = 0.861, probability = 6.59E-01, significance = 0.442
 \fi
 
-As shown in Table~\ref{tab:fit exp3}, both fits have reasonable fit quality and remarkably consistent values of $\rho$ (identical within the resolution) which are compared to previous determinations at lower energies in Fig.~\ref{fig:rho cmp exp3}.
+As shown in Table~\ref{tab:fit exp3}, both fits have reasonable fit quality and remarkably consistent values of $\rho$ (identical within the resolution) which are compared to previous determinations at lower energies in Fig.~\ref{fig:rho cmp exp3}. Let us repeat that the parameters of the nuclear amplitude ($a$ and $b_i$) are consistent between step 1 ($\beta^*=1000\un{m}$ data only) and step 2 (both $\beta^* = 1000$ and $ 90\un{m}$ data) of the fitting procedure.
 
 Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very different in the fits. It is much stronger in the case of the peripheral-phase, which can be expected as this phase features a faster variation in the low-$|t|$ region.
 
