Added "machine" authors, added one reference to non-exponentiality reasons.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11842 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -10,6 +10,7 @@
 	\AddAuthor{U.~Bottigli}{7b}{}{}%
 	\AddAuthor{M.~Bozzo}{6a}{6b}{}%
 	\AddAuthor{P.~Broul\'{i}m}{1a}{}{}%
+	\AddAuthor{H.~Burkhardt}{9}{}{}%
 	\AddAuthor{A.~Buzzo}{6a}{}{}%
 	\AddAuthor{F.~S.~Cafagna}{5a}{}{}%
 	\AddAuthor{C.~E.~Campanella}{5c}{5a}{}%
@@ -70,11 +71,13 @@
 	\AddAuthor{E.~Radermacher}{9}{}{}%
 	\AddAuthor{E.~Radicioni}{5a}{}{}%
 	\AddAuthor{F.~Ravotti}{9}{}{}%
+	\AddAuthor{S.~Redaelli}{9}{}{}%
 	\AddAuthor{E.~Robutti}{6a}{}{}%
 	\AddAuthor{L.~Ropelewski}{9}{}{}%
 	%\AddAuthor{C.~Royon}{}{}{g}%
 	\AddAuthor{G.~Ruggiero}{9}{}{}%
 	\AddAuthor{H.~Saarikko}{3a}{3b}{}%
+	\AddAuthor{B.~Salvachua}{9}{}{}%
 	\AddAuthor{A.~Scribano}{7a}{}{}%
 	\AddAuthor{J.~Smajek}{9}{}{}%
 	\AddAuthor{W.~Snoeys}{9}{}{}%
@@ -83,7 +86,9 @@
 	\AddAuthor{C.~Taylor}{10}{}{}%
 	\AddAuthor{N.~Turini}{7b}{}{}%
 	\AddAuthor{V.~Vacek}{1c}{}{}%
+	\AddAuthor{G.~Valentino}{9}{}{}%
 	\AddAuthor{J.~Welti}{3a}{3b}{}%
+	\AddAuthor{J.~Wenninger}{9}{}{}%
 	\AddAuthor{P.~Wyszkowski}{8}{}{}%
 	\AddAuthor{K.~Zielinski}{8}{}{}%
 }
