--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -203,6 +203,13 @@
 	\Review{J.~Phys.}{G42}{2015}{2, 025003}.
 	%doi = http://dx.doi.org/10.1088/0954-3899/42/2/025003
 
+\bibitem{fagundes15}
+	%Fagundes, D. A. and Jenkovszky, L. and Miranda, E. Q. and Pancheri, G. and Silva, P. V. R. G.
+	\Name{D.~A.~Fagundes \etal{}}
+	Fine structure of the diffraction cone: from ISR to the LHC,
+	arXiv:hep-ph/1509.02197 (2015).
+    %url = "http://inspirehep.net/record/1392451/files/arXiv:1509.02197.pdf",
+
 \bibitem{fagundes12}
 	%Aspects of a dynamical gluon mass approach to elastic hadron scattering at LHC
 	\Name{D.~A.~Fagundes, E.~G.~S.~Luna, M.~J.~Menon and A.~A.~Natale}
