--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -9,6 +9,9 @@
 \usepackage{fleqn}
 \usepackage{enumitem}
 
+% TODO: only for draft
+\usepackage{lineno}
+
 %----------------------------------------------------------------------------
 
 \def\d{{\rm d}}
@@ -59,6 +62,9 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 \end{frontmatter}
 
 %--------------------------------------------------
+
+% TODO: only for draft
+\linenumbers
 
 \input introduction.tex
 
