--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -19,6 +19,6 @@ was traditionally quoted.
 An interesting aspect of $\rho$ is its predictive power in extrapolating the total cross-section to higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
-The present article discusses the first measurement of elastic scattering in the CNI region at the CERN LHC by the TOTEM experiment. The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics ($\beta^{*}=1000\,$m) and cover a $|t|$-interval from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, extending well into the interference region. In order to strengthen the statistical power and thus enable a cleaner identification of the interference effects, the analysis also exploits another, complementary data set with higher statistics~\cite{8tev-90m}, taken at the same energy, but with different beam optics ($\beta^{*}=90\,$m), and thus covering a different $|t|$-range: $0.027 < |t| < 0.2\un{GeV^2}$. The isolated analysis of the latter data set has excluded a purely exponential behaviour of the observed elastic cross-section with more than $7\un{\sigma}$ confidence. The new data in the CNI region allow to study the source of the non-exponentiality: nuclear component, CNI effects or both. In order to explore the full spectrum of possibilities, an interference formula without the limitations of SWY is needed. In the present study the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) interference formula~\cite{kl94} is used, which offers much more freedom for the choice of the theoretically unknown functional forms of the hadronic modulus and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively expressed in terms of $\rho$, become conditional to the choice of the model describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional form of the hadronic phase at small $|t|$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs.~peripherality). It will be shown that both options are compatible with the data, thus the central picture still prevalent in theoretical models is not a necessity.
+The present article discusses the first measurement of elastic scattering in the CNI region at the CERN LHC by the TOTEM experiment. The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics ($\beta^{*}=1000\,$m) and cover a $|t|$-interval from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, extending well into the interference region. In order to strengthen the statistical power and thus enable a cleaner identification of the interference effects, the analysis also exploits another, complementary data set with higher statistics~\cite{8tev-90m}, taken at the same energy, but with different beam optics ($\beta^{*}=90\,$m), and thus covering a different $|t|$-range: $0.027 < |t| < 0.2\un{GeV^2}$. The isolated analysis of the latter data set has excluded a purely exponential behaviour of the observed elastic cross-section with more than $7\un{\sigma}$ confidence. The new data in the CNI region allow to study the source of the non-exponentiality: nuclear component, CNI effects or both. In order to explore the full spectrum of possibilities, an interference formula without the limitations of SWY is needed. In the present study the more general and complex interference formulae of Cahn \cite{cahn82} and Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) \cite{kl94} are used, offering much more freedom for the choice of the theoretically unknown functional forms of the hadronic modulus and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively expressed in terms of $\rho$, become conditional to the choice of the model describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional form of the hadronic phase at small $|t|$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs.~peripherality). It will be shown that both options are compatible with the data, thus the central picture still prevalent in theoretical models is not a necessity.
 
 Section~\ref{sec:exp apparatus} of this article outlines the experimental setup used for the measurement. The properties of the special beam optics are described in Section~\ref{sec:beam optics}. Section~\ref{sec:data taking} gives details of the data-taking conditions. The data analysis and reconstruction of the differential cross-section are described in Section~\ref{sec:differential cross-section}. Section~\ref{sec:coulomb} presents the study of the Coulomb-nuclear interference together with the functional form of the hadronic amplitude. The values of $\rho$ and $\sigma_{\rm tot}$ are determined.
