Cahn added to Figure/Table legends and captions.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12052 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -254,7 +254,7 @@ The goal of this section is to test whether the data are compatible with a purel
 \begin{center}
 \includegraphics{fig/fit_exp1/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp1/phase_cni_effect.pdf}
-\caption{Visualisation of the fit results from Table~\ref{tab:fit exp1} obtained with $N_b=1$. The continuous (dashed) lines correspond to fits with KL (SWY) formula. Note that the fits with constant nuclear phase largely overlap.
+\caption{Visualisation of the fit results from Table~\ref{tab:fit exp1} obtained with $N_b=1$. The continuous (dashed) lines correspond to fits with Cahn or KL (SWY) formula. Note that the fits with constant nuclear phase largely overlap.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
@@ -302,7 +302,7 @@ Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very 
 
 
 \begin{table}
-\caption{Fit results with KL formula and $N_b=3$.}
+\caption{Fit results with Cahn or KL formula and $N_b=3$.}
 \vskip-3mm
 \label{tab:fit exp3}
 \begin{center}
@@ -316,7 +316,7 @@ Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very 
 \begin{center}
 \includegraphics{fig/fit_exp3/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp3/phase_cni_effect.pdf}
-\caption{Visualisation of the fit results from Table~\ref{tab:fit exp3} obtained with KL formula and $N_b=3$. The solid lines correspond to fits with different nuclear phases.
+\caption{Visualisation of the fit results from Table~\ref{tab:fit exp3} obtained with Cahn or KL formula and $N_b=3$. The solid lines correspond to fits with different nuclear phases.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
