--- a/2013/1km paper/fig/fit_exp1/table_data.tex
+++ b/2013/1km paper/fig/fit_exp1/table_data.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lcccc}\hline\hline
-										& SWY, constant 		& KL, constant 			& KL, peripheral		\cr\hline\hline
+										& SWY, constant 		& Cahn/KL, constant		& Cahn/KL, peripheral	\cr\hline\hline
 $\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 48.0 / 27 = 1.78$	& $ 48.1 / 27 = 1.78$	& $ 27.7 / 27 = 1.03$	\cr
 $\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 180.8 / 58 = 3.12$	& $ 181.2 / 58 = 3.12$	& $ 64.3 / 58 = 1.11$	\cr
 \hline
